--- a/Similarity+of+documents.ipynb
+++ b/Similarity+of+documents.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "for(i in 1:131){\n",
-    "  filename<-paste(\"A:/My Initiatives/MachineLearning with R and Python/NLP/\", toString(i), sep=\"\")\n",
+    "  filename<-paste(\"path_to_dir/\", toString(i), sep=\"\")\n",
     "  filename<-paste(filename,\".pdf\", sep=\"\")\n",
     "  txt=pdf_text(filename)\n",
     "  output<-paste(\"C:/Users/bhark/Pdf/\", toString(i), sep=\"\")\n",
